test on windows desktop, font color is too light, so change body font-weight to bold; fix the first  accordion not folding problem on food-drink.html

--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,8 @@ header {
 body {
     font-family: 'Nixie One', cursive;
     position: relative;
+    color: black;
+    font-weight: bold;
 }
 
 .navbar-brand span  {
